--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,6 @@ author: "McCade Pearson"
 date: "`r Sys.Date()`"
 output:
   html_document:
-    output_dir: docs
     theme: null
     highlight: null
 ---
@@ -124,3 +123,5 @@ tr:nth-child(even) {
 </style>
 
 The first link is this: https://mccadep8.github.io/Portfolio/Voronoi_Example.html
+
+The second link is this: https://mccadep8.github.io/Portfolio/Octopus.html
